--- a/Client/Pages/AggiungiPersona.razor
+++ b/Client/Pages/AggiungiPersona.razor
@@ -16,28 +16,28 @@
         <div class="col-md-6">
             <div class="form-group">
                 <label id="Cognome" class="control-label">Cognome</label>
-                <InputText id="Cognome" class="form-control form-control-lg" @bind-Value="persona.Cognome"></InputText>
+                <InputText id="Cognome" class="form-control form-control-lg" @bind-Value="persona.Cognome" placeholder="Cognome"></InputText>
                 @*<ValidationMessage For="@(() => persona.Cognome)" />*@
             </div>
         </div>
         <div class="col-md-6">
             <div class="form-group">
                 <label id="Nome" class="control-label">Nome</label>
-                <InputText id="Nome" class="form-control form-control-lg" @bind-Value="persona.Nome"></InputText>
+                <InputText id="Nome" class="form-control form-control-lg" @bind-Value="persona.Nome" placeholder="Nome"></InputText>
                 @*<ValidationMessage For="@(() => persona.Nome)" />*@
             </div>
         </div>
         <div class="col-md-6">
             <div class="form-group">
                 <label id="Email" class="control-label">Indirizzo Email</label>
-                <InputText id="Email" class="form-control form-control-lg" @bind-Value="persona.Email"></InputText>
+                <InputText id="Email" class="form-control form-control-lg" @bind-Value="persona.Email" placeholder="Indirizzo Email"></InputText>
                 @*<ValidationMessage For="@(() => persona.Email)" />*@
             </div>
         </div>
         <div class="col-md-6">
             <div class="form-group">
                 <label id="Telefono" class="control-label">Telefono</label>
-                <InputText id="Telefono" class="form-control form-control-lg" @bind-Value="persona.Telefono"></InputText>
+                <InputText id="Telefono" class="form-control form-control-lg" @bind-Value="persona.Telefono" placeholder="Telefono"></InputText>
                 @*<ValidationMessage For="@(() => persona.Telefono)" />*@
             </div>
         </div>
